# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.349 2005/10/10 19:27:43 rocket Exp $

  10 Oct 2005; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  remove --no-deps so dependancies get installed for genkernel

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix missing : statement in unpack

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix livecd-stage2 unpack when seedcache is turned off

  10 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/functions.sh:
  Fix module unpacking and make it actually optional.

  10 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix broken seedcache autoresume interaction

  07 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Cleanup stage directories properly for tar installs

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
  Tinderbox no longer cleans /tmp/*

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/tinderbox/tinderbox-chroot.sh,
  targets/tinderbox/tinderbox-controller.sh:
  Fixing problem with bind mounted portage and final rsync on tinderbox target
  and adding additional logging.

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> modules/tinderbox_target.py:
  Stop tinderbox from trying to create a tarball of itself

  06 Oct 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  Fix catalyst so it fully disables snapcache when its not specified in the
  config file

  06 Oct 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  examples/livecd-stage2_template.spec:
  Removed livecd/runscript and livecd/archscript from livecd-stage2 example
  spec template and updating version stamp.

  06 Oct 2005; Eric Edgar <rocket@gentoo.org> catalyst,
  modules/catalyst_support.py: